charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dekrey-dot-net
  labels:
    app: dekrey-dot-net
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: dekrey-dot-net
